# training

./: .env  .env.dist  .flaskenv  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  docker-compose.yml  dockerfile  entrypoint.sh  install.sh  pyproject.toml  requirements.txt  setup.py  setup_dev_env.sh
app/: Dockerfile  __init__.py  auth.py  blog.py  config.py  database.py  db.py  logger.py  logger_setup.py
app/controllers/: users_controller.py
app/entities/: credentials.py  user.py  user_filters.py
app/errors/: sql_database_errors.py  user_errors.py
app/repositories/: entity_repository.py  sql_alechemy_user_repository.py  user_repository.py  user_sql_alchemy_filters_builder.py
app/services/: authentification_services.py  user_services.py
app/templates/: index.html
app/templates/blog/: update.html
nginx/: nginx.conf
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py
