[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["Raken Hammed"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "22.1.0"
click = "8.1.3"
coverage = "6.4.4"
Flask = "2.2.2"
Flask-JWT = "0.3.2"
iniconfig = "1.1.1"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.1"
mypy-extensions = "0.4.3"
packaging = "21.3"
pathspec = "0.10.1"
platformdirs = "2.5.2"
pluggy = "1.0.0"
py = "1.11.0"
PyJWT = "1.4.2"
pyparsing = "3.0.9"
pytest = "7.1.3"
python-dotenv = "0.21.0"
tomli = "2.0.1"
Werkzeug = "2.2.2"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
