[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Raken Hammed"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^22.1.0"
click = "^8.1.3"
coverage = "^6.4.4"
Flask = "^2.2.2"
iniconfig = "^1.1.1"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.1"
mypy-extensions = "^0.4.3"
packaging = "^21.3"
pathspec = "^0.10.1"
platformdirs = "^2.5.2"
pluggy = "^1.0.0"
py = "^1.11.0"
pyparsing = "^3.0.9"
pytest = "^7.1.3"
python-dotenv = "^0.21.0"
tomli = "^2.0.1"
Werkzeug = "^2.2.2"
flask-sqlalchemy = "^3.0.0"
greenlet = "^1.1.3"
SQLAlchemy = "^1.4.41"
astroid = "^2.12.10"
black = "^22.10.0"
dill = "^0.3.5.1"
isort = "^5.10.1"
lazy-object-proxy = "^1.7.1"
mccabe = "^0.7.0"
pylint = "^2.15.3"
tomlkit = "^0.11.5"
wrapt = "^1.14.1"
cfgv = "^3.3.1"
distlib = "^0.3.6"
filelock = "^3.8.0"
identify = "^2.5.6"
nodeenv = "^1.7.0"
pre-commit = "^2.20.0"
PyYAML = "^6.0"
toml = "^0.10.2"
virtualenv = "^20.16.5"
aiohttp = "^3.8.3"
aiosignal = "^1.2.0"
async-timeout = "^4.0.2"
charset-normalizer = "^2.1.1"
Flask-JWT-Extended = "^4.4.4"
Flask-SQLAlchemy = "^3.0.0"
frozenlist = "^1.3.1"
idna = "^3.4"
multidict = "^6.0.2"
psycopg2-binary = "^2.9.4"
PyJWT = "^2.6.0"
yarl = "^1.8.1"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[tool.black]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

